adicionando  ejs ao projeto e tambem views criadas propostas pelo curso

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/luan11/curso-nodejs-udemy#readme",
   "dependencies": {
+    "ejs": "^2.6.1",
     "express": "^4.17.1"
   }
 }
